# gloggcat

./: .clang-format  CMakeLists.txt  README.md  cmdlistdelegate.cpp  cmdlistdelegate.h  cmdlistmodel.cpp  cmdlistmodel.h  connection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
